[project]
name = "fly-in"
version = "1.4"
description = "Efficient drone fleet routing simulator under constraints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "colorama>=0.4.6",
    "pydantic>=2.13.4",
    "types-colorama>=0.4.15.20260508",
    "webcolors>=25.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "B", "I"]
